2019-03-07 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/inst.cc:
	  Carry workaround.
	* src/pdk/gen.c:
	  Comparison fix.
	* sim/ucsim/pdk.src/glob.cc:
	  dzsn / izsn debug output fix, patch by Nicolas Lesser.
	* sdas/asxxsrc/asout.c,
	  sdas/linksrc/lkrloc3.c:
	  Fix handling of addresses of variables in RAM, patch by Nicolas Lesser.

2019-03-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: sdcclib.exe is not built
	  anymore, so don't try to include it in the installer

2019-03-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve pointer handling and subtraction.
	* sim/ucsim/pdk.src/inst.cc:
	  Fix idxm.
	* src/pdk/gen.c:
	  Comparison fix.

2019-03-06 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asxxsrc/asout.c:
	  Address handling fix, patch by Nicolas Lesser.
	* sim/ucsim/pdk.src/glob.cc,
	  sim/ucsim/pdk.src/pdk.cc:
	  State output fix, patch by Nicolas Lesser.
	* src/pdk/gen.c:
	  Comparison fix.
	* sim/ucsim/pdk.src/inst.cc:
	  Fix src, slc.

2019-03-05 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk14/__gptrget.s,
	  device/lib/pdk15/__gptrget.s:
	  Fix generic pointer read.
	* sim/ucsim/pdk.src/inst.cc:
	  Fix push af / pop af simulation.

2019-03-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/pdk14/support.c:
	  Fix regression-test _putchar for pdk14.
	* device/lib/pdk14/__gptrget.s,
	  device/lib/pdk15/__gptrget.s:
	  Fix generic pointer read.
	* sim/ucsim/pdk.src/glob.cc,
	  sim/ucsim/pdk.src/inst.cc:
	  pdk14 bit instruction fix, patch by Nicolas Lesser.

2019-03-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2363.c,
	  support/regression/tests/bug-2756.c,
	  support/regression/tests/gcc-torture-execute-20011008-3.c,
	  support/regression/tests/gcc-torture-execute-20020402-3.c,
	  support/regression/tests/gcc-torture-execute-20100430-1.c,
	  support/regression/tests/gcc-torture-execute-cmpdi-1.c,