@@ -1,3 +1,8 @@
+2019-03-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c:
+	  Workaround for lack of support for offset at call in assembler.
+
 2019-03-07 Philipp Klaus Krause <pkk AT spth.de>
 
 	* sim/ucsim/pdk.src/inst.cc:
